# OSM_PC_Mapping

./: .gitignore  README.md
bundler_parser/: CMakeLists.txt  package.xml
bundler_parser/include/: bundler-parser.h  common.h  flags.h  utility-functions.h
bundler_parser/src/: bundler-parser.cc  flags.cc  test-bundler-parser.cc  utility-functions.cc
libpointmatcher/: CMakeCache.txt  Doxyfile  Makefile  cmake_install.cmake  cmake_uninstall.cmake  libpointmatcher.so.1  libpointmatcher.so.1.2.1  libpointmatcher.so.1.2.3  libpointmatcherConfig.cmake  libpointmatcherConfigVersion.cmake  working (with 12,85 init trans).yaml
libpointmatcher/contrib/: Makefile  cmake_install.cmake
libpointmatcher/contrib/yaml-cpp-pm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libpointmatcher/data/: cl.csv  filtered.csv  filtered_output.pcd  transform.py  ts.py
libpointmatcher/doc/html/: IO_8h_source.html  Parametrizable_8h_source.html  PointMatcher_8h.html  PointMatcher_8h_source.html  Registrar_8h_source.html  annotated.html  classPointMatcherIO_1_1LabelGenerator-members.html  classPointMatcherIO_1_1LabelGenerator.html  classPointMatcherIO_1_1PLYElement-members.html  classPointMatcherIO_1_1PLYElement.html  classPointMatcherIO_1_1PLYElementF-members.html  classPointMatcherIO_1_1PLYElementF.html  classPointMatcherIO_1_1PLYVertex-members.html  classPointMatcherIO_1_1PLYVertex.html  classes.html  dir_6ba2dfb19aededaf0c2760cd8408bd7e.html  files.html  formula.repository  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_enum.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_m.html  functions_func_o.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  (+111 more)
libpointmatcher/evaluations/: Makefile  cmake_install.cmake
libpointmatcher/examples/: Makefile  align_sequence  build_map  cmake_install.cmake  compute_overlap  config.yaml  icp.cpp  icp_simple  icp_simple.cpp  list_modules  oldcfg.yaml  pmicp
libpointmatcher/pointmatcher/: ErrorMinimizersImpl.cpp  ICP.cpp  Registry.cpp  TransformationsImpl.cpp  TransformationsImpl.h
libpointmatcher/utest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
osm/: buildings_cachehttp:overpass-api.deapimap?bbox=6.08051,50.77248,6.08545,50.77662.picke  corners.csv  visualization.py
pc_segmentation/: CMakeLists.txt  package.xml
pc_segmentation/include/: common.h  flags.h  pc-handler.h
pc_segmentation/src/: flags.cc  pc-handler.cc  segment-pc.cc
presentation/: .~lock.Presentation_3DPhoto.odt#  .~lock.anurag.odp#  Presentation_3DPhoto.odt  Registering_Point_Clouds_to_OSM_Building_Outlines.pptx  anurag.odp
proposal/: proposal.tex  refs.bib
ransac/: CMakeLists.txt  corner-extract.py  corner_extract.py  corners_from_img.csv  corners_from_img__1.csv  filters.cpp  harris.py  hough.py  intersec.py  kdtree.py  match_corners.py  random_sample_consensus  ransac  ransac.cpp  sac_model_finite_line.h  sac_model_finite_line.hpp  test.cpp
report/: README.txt  egbib.bib  egpaper_final.tex
