<package>

  <name>bundler_parser</name>
  <version>0.0.1</version>
  <description>A package for parsing bundler files. see http://www.cs.cornell.edu/~snavely/bundler/bundler-v0.4-manual.html#S6</description>
  <maintainer email="anurag.vempati@mavt.ethz.ch">Anurag Vempati</maintainer>
  <license>Anurag 1.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>gflags_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>

</package>
